<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Configurações</string>
    <string name="action_horarios">Horários</string>
    <string name="action_pontoonibus">Pontos de Ônibus</string>
    <string name="action_rotes">Rotas</string>
    <string name="action_onibus">Onibus</string>
    <string name="action_gerenciar_horarios">Gerenciar Horários</string>
    <string name="rotes">Rotas</string>
    <string name="connection_unavailable">Conexão indisponível</string>
    <string name="rota_for_title">Rota</string>
    <string name="placa">Placa do ônibus: </string>
    <string name="button_add_bus">Adicionar ônbibus </string>
    <string name="app_name">BusTracker - ADM</string>
    <string name="adicionar">Adicionar</string>
    <string name="adicionar_rota">Adicionar Rota</string>
    <string name="adicionar_onibus">Adicionar ônbibus </string>
    <string name="adicionar_horarios">Adicionar horarios </string>
    <string name="conexao_indisponivel">Conexão indisponível</string>
    <string name="cancelar">Cancelar</string>
    <string name="cant_without_connection">Essa ação não pode ser completada sem conexão</string>
    <string name="empty_ponto_onibus">Não há nenhum Ponto de Ônibus.</string>
    <string name="error">Erro</string>
    <string name="error_format">Formato da Placa Inválido</string>
    <string name="error_placaExistente">Ônibus com essa placa já existe</string>
    <string name="error_rotaInexistente">A rota que você passou não existe</string>
    <string name="exit">Sair</string>
    <string name="help">Ajuda</string>
    <string name="hint_placa">(LLL-NNNN)</string>
    <string name="horario">Horário</string>
    <string name="horarios">Horários</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="no_rota">Não há Rotas</string>
    <string name="nome">Nome</string>
    <string name="coordenadas">Coordenadas</string>
    <string name="onibus">Onibus</string>
    <string name="OK">OK</string>
    <string name="placa_onibus">Placa do ônibus</string>
    <string name="ponto_onibus">Ponto de Ônibus</string>
    <string name="pontos_onibus">Pontos de Ônibus</string>
    <string name="refresh">Atualizar</string>
    <string name="remove">Remover</string>
    <string name="removing">Removendo</string>
    <string name="number_rota">Número da rota</string>
    <string name="rotas">Rotas</string>
    <string name="rota">Rota</string>
    <string name="settings">Configurações</string>
    <string name="sucess_addBus">Ônibus criado com sucesso.</string>
    <string name="title_activity_add_ponto_onibus">Adicionar Ponto de Ônibus</string>
    <string name="title_dialog_add_ponto_onibus">Adicionar Ponto de Ônibus</string>
    <string name="title_dialog_add_ponto_rota">Adicionar Ponto na Rota</string>
    <string name="title_dialog_add_rota">Adicionar Rota</string>
    <string name="title_dialog_add_horario">Adicionar Hoŕario do Ônibus</string>
    <string name="title_dialog_add_onibus">Adicionar Ônibus</string>
    <string name="title_activity_add_onibus">Adicionar ônibus</string>
    <string name="title_activity_dialog_remove">Removendo</string>
    <string name="title_activity_rotas_horario">Rotas</string>
    <string name="title_activity_add_horario">Adicionar Horário</string>
    <string name="wait">Aguarde</string>
    <string name="title_activity_add_ponto_rota">AddPontoRotaActivity</string>
    <string name="title_activity_add_rota_onibus">Adicionar ponto em rota</string>
    <string name="ponto_anterior">Ponto anterior: </string>
    <string name="ponto_novo">Novo ponto: </string>
    <string name="ponto_posteior">Ponto posterior: </string>
    <string name="button_addPontoEmRota">Adicionar ponto na rota</string>
    <string name="title_activity_fuga_rota">Fugas de rotas</string>
    <string name="empty_fuga_rota">Não há fugas de rotas </string>
    <string name="resolverFugarota">Marcar como resolvido</string>
    <string name="processing"> Processando</string>
    <string name="history">Histórico</string>
    <string name="adicionar_ponto_rota">Adicionar ponto rota</string>

</resources>