<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:orientation="vertical" >

    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >

        <TextView
        	android:id="@+id/textViewNome"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:text="@string/nome"
        	android:layout_weight="3"
        	 />

        <EditText
        	android:id="@+id/editTextNome"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="7"
        	android:hint="@string/nome"
        	 >

        	<requestFocus />
        	
        </EditText>
    	
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewCoor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/coordenadas"
            android:layout_weight="3"
             />

        <EditText
            android:id="@+id/editTextCoor"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="7"
            android:hint="@string/coordenadas"
            android:ems="1024"
        	android:inputType="textMultiLine"
             >

        </EditText>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewPonto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ponto_onibus"
            android:layout_weight="3"
             />
    
    	<Spinner
            android:id="@+id/spinner_add_rota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:layout_marginTop="5dp"
            tools:listitem="@android:layout/simple_spinner_item" />
        
        
    </LinearLayout>

</LinearLayout>
